# nbma

./: .gitignore  .gitmodules  Makefile.am  NEWS  README  configure.ac  pylintrc
autotools/: ac_python_module.m4  check-ganeti-version  run-in-tempdir
daemons/: ganeti-nld
devel/: review
doc/: design-1.0.rst  devnotes.rst
doc/examples/: cluster.conf  common.conf  endpoint.conf  nbma-utils.conf  nbma.conf
hooks/watcher/: check-nld
lib/: __init__.py  config.py  constants.py  errors.py  iptables.py  networktables.py  nflog_dispatcher.py  nld_confd.py  nld_nld.py  objects.py  server.py
scripts/: common.sh.in  gre_setup.in  iptables_setup.in  routing_setup.in
test/: nbma.config_unittest.py
test/data/: bash_var_fragment.sh
