
# Automake doesn't export these variables before version 1.10.
abs_top_builddir = @abs_top_builddir@
abs_top_srcdir = @abs_top_srcdir@

nbmautilsdir = $(libdir)/ganeti/nbma
pkgsysconfdir = $(sysconfdir)/ganeti/nbma
pkgpythondir = $(pythondir)/ganeti_nbma

ACLOCAL_AMFLAGS = -I autotools
REPLACE_VARS_SED = autotools/replace_vars.sed
RUN_IN_TEMPDIR = $(top_srcdir)/autotools/run-in-tempdir

dist_doc_DATA = \
	COPYING \
	README

dist_sbin_SCRIPTS= \
	daemons/ganeti-nld

nodist_nbmautils_SCRIPTS = \
	scripts/gre_setup \
	scripts/iptables_setup \
	scripts/routing_setup \
	scripts/common.sh

pkgpython_PYTHON = \
	lib/__init__.py \
	lib/constants.py \
	lib/config.py \
	lib/iptables.py \
	lib/networktables.py

nodist_pkgpython_PYTHON = \
	lib/_autoconf.py

TEST_FILES = \
	test/data/bash_var_fragment.sh

dist_TESTS = \
	test/nbma.config_unittest.py

TESTS = $(dist_TESTS)

EXTRA_DIST = \
	scripts/gre_setup.in \
	scripts/iptables_setup.in \
	scripts/routing_setup.in \
	scripts/common.sh.in \
	$(RUN_IN_TEMPDIR) \
	$(TEST_FILES) \
	$(dist_TESTS)

CLEANFILES = \
	autotools/replace_vars.sed \
	stamp-directories \
	$(nodist_nbmautils_SCRIPTS) \
	$(nodist_pkgpython_PYTHON)

DIRS = \
       scripts \
       doc \
       daemons \
       autotools \
       lib \
       test \
       test/data

BUILT_SOURCES = \
	lib/_autoconf.py \
	srclinks

TESTS_ENVIRONMENT = \
	PYTHONPATH=. \
	$(RUN_IN_TEMPDIR) $(PYTHON)

all_python_code = \
	$(dist_sbin_SCRIPTS) \
	$(dist_TESTS) \
	$(pkgpython_PYTHON)

srclink_files = \
	$(all_python_code) \
	$(TEST_FILES)

stamp-directories: Makefile
	@mkdir_p@ $(DIRS)
	touch $@

srclinks: stamp-directories
	set -e; \
	for i in $(srclink_files); do \
	  if test ! -f $$i -a -f $(abs_top_srcdir)/$$i; then \
	  $(LN_S) $(abs_top_srcdir)/$$i $$i; \
	  fi; \
	done


$(REPLACE_VARS_SED): Makefile stamp-directories
	set -e; \
	{	echo 's#@PREFIX@#$(prefix)#g'; \
		echo 's#@PKGSYSCONFDIR@#$(pkgsysconfdir)#g'; \
		echo 's#@LOCALSTATEDIR@#$(localstatedir)#g'; \
		echo 's#@NBMAUTILSDIR@#$(nbmautilsdir)#g'; \
		echo 's#@NBMA_VERSION@#$(PACKAGE_VERSION)#g'; \
	} > $@

scripts/%: scripts/%.in stamp-directories $(REPLACE_VARS_SED)
	sed -f $(REPLACE_VARS_SED) < $< > $@
	chmod u+x $@

lib/_autoconf.py: Makefile stamp-directories
	set -e; \
	{ echo '# This file is automatically generated, do not edit!'; \
	  echo '#'; \
	  echo ''; \
	  echo '"""Build-time configuration for Ganeti-NBMA.'; \
	  echo '';\
	  echo 'This file is autogenerated by the build process.'; \
	  echo 'For any changes you need to re-run ./configure (and'; \
	  echo 'not edit by hand).'; \
	  echo ''; \
	  echo '"""'; \
	  echo ''; \
	  echo "PACKAGE_VERSION = '$(PACKAGE_VERSION)'"; \
	} > $@

