
# Automake doesn't export these variables before version 1.10.
abs_top_builddir = @abs_top_builddir@
abs_top_srcdir = @abs_top_srcdir@

nbmautilsdir = $(libdir)/ganeti/nbma
pkgsysconfdir = $(sysconfdir)/ganeti/nbma
pkgpythondir = $(pythondir)/ganeti_nbma

ACLOCAL_AMFLAGS = -I autotools
REPLACE_VARS_SED = autotools/replace_vars.sed
RUN_IN_TEMPDIR = $(top_srcdir)/autotools/run-in-tempdir

dist_doc_DATA = \
	COPYING \
	README

dist_sbin_SCRIPTS= \
	daemons/ganeti-nld

nodist_nbmautils_SCRIPTS = \
	scripts/gre_setup \
	scripts/iptables_setup \
	scripts/routing_setup \
	scripts/common.sh

pkgpython_PYTHON = \
	lib/__init__.py \
	lib/constants.py \
	lib/config.py \
	lib/iptables.py \
	lib/networktables.py \
	lib/nflog_dispatcher.py \
	lib/nld_confd.py \
	lib/server.py

nodist_pkgpython_PYTHON = \
	lib/_autoconf.py

TEST_FILES = \
	test/data/bash_var_fragment.sh

dist_TESTS = \
	test/nbma.config_unittest.py

TESTS = $(dist_TESTS)

# Things to build but not to install (add it to EXTRA_DIST if it should be
# distributed)
noinst_DATA = \
	devel/upload

docrst = \
	doc/design-1.0.rst \
	doc/devnotes.rst

EXTRA_DIST = \
	NEWS \
	pylintrc \
	ganeti.git/devel/upload.in \
	devel/upload \
	doc/examples/cluster.conf \
	doc/examples/endpoint.conf \
	doc/examples/common.conf \
	scripts/gre_setup.in \
	scripts/iptables_setup.in \
	scripts/routing_setup.in \
	scripts/common.sh.in \
	hooks/watcher/check-nld \
	$(docrst) \
	$(RUN_IN_TEMPDIR) \
	$(TEST_FILES) \
	$(dist_TESTS)

CLEANFILES = \
	autotools/replace_vars.sed \
	devel/upload \
	stamp-directories \
	$(nodist_nbmautils_SCRIPTS) \
	$(nodist_pkgpython_PYTHON)

DIRS = \
       scripts \
       doc \
       daemons \
       autotools \
       lib \
       test \
       test/data

BUILT_SOURCES = \
	lib/_autoconf.py \
	srclinks

TESTS_ENVIRONMENT = \
	PYTHONPATH=. \
	$(RUN_IN_TEMPDIR) $(PYTHON)

all_python_code = \
	$(dist_sbin_SCRIPTS) \
	$(dist_TESTS) \
	$(pkgpython_PYTHON)

srclink_files = \
	$(all_python_code) \
	$(TEST_FILES)

lint_python_code = \
	ganeti_nbma \
	$(dist_TESTS) \
	$(dist_sbin_SCRIPTS)

stamp-directories: Makefile
	@mkdir_p@ $(DIRS)
	touch $@

srclinks: stamp-directories
	set -e; \
	for i in $(srclink_files); do \
	  if test ! -f $$i -a -f $(abs_top_srcdir)/$$i; then \
	  $(LN_S) $(abs_top_srcdir)/$$i $$i; \
	  fi; \
	done


$(REPLACE_VARS_SED): Makefile stamp-directories
	set -e; \
	{	echo 's#@PREFIX@#$(prefix)#g'; \
		echo 's#@PKGSYSCONFDIR@#$(pkgsysconfdir)#g'; \
		echo 's#@LOCALSTATEDIR@#$(localstatedir)#g'; \
		echo 's#@NBMAUTILSDIR@#$(nbmautilsdir)#g'; \
		echo 's#@NBMA_VERSION@#$(PACKAGE_VERSION)#g'; \
	} > $@

scripts/%: scripts/%.in stamp-directories $(REPLACE_VARS_SED)
	sed -f $(REPLACE_VARS_SED) < $< > $@
	chmod u+x $@

lib/_autoconf.py: Makefile stamp-directories
	set -e; \
	{ echo '# This file is automatically generated, do not edit!'; \
	  echo '#'; \
	  echo ''; \
	  echo '"""Build-time configuration for Ganeti-NBMA.'; \
	  echo '';\
	  echo 'This file is autogenerated by the build process.'; \
	  echo 'For any changes you need to re-run ./configure (and'; \
	  echo 'not edit by hand).'; \
	  echo ''; \
	  echo '"""'; \
	  echo ''; \
	  echo "PACKAGE_VERSION = '$(PACKAGE_VERSION)'"; \
	  echo "PKGSYSCONFDIR = '$(pkgsysconfdir)'"; \
	} > $@

devel/upload: ganeti.git/devel/upload.in $(REPLACE_VARS_SED)
	sed -f $(REPLACE_VARS_SED) < $< > $@
	chmod u+x $@

ganeti:
	cd $(top_builddir) && test -h "$@" || { rm -f $@ && $(LN_S) ganeti.git/lib $@; }

ganeti_nbma:
	cd $(top_builddir) && test -h "$@" || { rm -f $@ && $(LN_S) lib $@; }

lint: ganeti_nbma
	@test -n "$(PYLINT)" || { echo 'pylint' not found during configure; exit 1; }
	$(PYLINT) $(LINT_OPTS) $(lint_python_code)
